[package]
name = "pro-json-tool"
version = "1.0.0"
description = "A JSON Tool"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
